# mllm-defake

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yaml  research.yaml  user.yml
.github/workflows/: building.yml  linting.yml  readme_demo_test.yml
decider/: conf.lua  main.lua  readme.md  submit.lua
decider/libs/: colors.lua  deepcopy.lua  easing.lua  explode.lua  json.lua
decorators/: fake_one_shot.py  roi.py  two_shot.py
mllm_defake/: cli.py  defake_dataset.py  utils.py  vllms.py
mllm_defake/classifiers/: basic_classifier.py  mllm_classifier.py
mllm_defake/datasets/: __init__.py  images_only.py  images_with_bbox_and_reason.py
mllm_defake/finetune/: __init__.py  grpo.py  sft.py  utils.py
mllm_defake/finetune/configs/: __init__.py  grpo_qwen2_5_vl_3b_lora.yml  sft_internvl2_5_1b_full.yml  sft_qwen2_5_vl_3b_full.yml  sft_qwen2_5_vl_3b_lora.yml
mllm_defake/finetune/rewards/: __init__.py  base_reward.py  constants.py  reward_v0.py  stage1_reward.py  stage2_reward.py  stage3_reward.py  utils.py
mllm_defake/finetune/rewards/functions/: __init__.py  format_reward.py  verdict_reward.py
mllm_defake/finetune/trainers/grpo/: __init__.py  base_grpo_trainer.py  grpo_config.py  grpo_trainer_internvl2_5.py  grpo_trainer_qwen2_5_vl.py  jsonl_dataset.py  sampler.py
mllm_defake/vllms/: __init__.py  lora.py  vllms.py
prompts/paper/: fusion.json  p1.json  p2.json  p3.json  p4-alt.json  p4.json  p5.json  p6.json
prompts/v3/: fake_one_shot.json  features.json  few_shot_combined.json  minor_features.json  reasoning.json  simple.json
tests/: comfor_test.py  readme_cli_test.py
